# random-walk

./: .gitignore  :w  <  README  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  `  compile_all.sh  compile_all_setup.sh  compile_commands.json  test.py
.cache/clangd/index/: BiasedWalker.cpp.3FD022A8D7AD5DB3.idx  (+39 more)
ContinuousWalker/: CMakeCache.txt  CMakeLists.txt  ContinuousWalker.cpp  ContinuousWalker.h  GammaWalker.cpp  GammaWalker.h  LaplaceWalker.cpp  LaplaceWalker.h  LevyWalker.cpp  LevyWalker.h  Makefile  Untitled.ipynb  cmake_install.cmake  lala  main.cpp  setup.py  test.py
ContinuousWalker/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  overshoot_distrib_heavy_tailed_process-checkpoint.ipynb
ContinuousWalker/ContinuousWalker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ContinuousWalker/src/: Bindings.cpp  ContinuousWalker.cpp  GammaWalker.cpp
ContinuousWalker/src/bindings/: AlexWalker_bindings.h  BiasedWalker_bindings.h  Bindings.cpp  ContinuousAdaptativeWalker_bindings.h  ContinuousWalker_bindings.h  FWalker_bindings.h  GammaWalker_bindings.h  LaplaceWalker_bindings.h  LevyWalkerSkewed_bindings.h  LevyWalker_bindings.h  Observables_bindings.h  ParetoWalker_bindings.h  RTPpotentialWalker_bindings.h  UniformWalker_bindings.h
ContinuousWalker/src/observables/: Observables.cpp  Observables.h
ContinuousWalker/src/walkers/: Alex.cpp  Alex.h  AlexWalker.cpp  AlexWalker.h  BiasedWalker.cpp  BiasedWalker.h  ContinuousAdaptativeWalker.cpp  ContinuousAdaptativeWalker.h  ContinuousWalker.cpp  ContinuousWalker.h  FWalker.cpp  FWalker.h  GammaWalker.cpp  GammaWalker.h  LaplaceWalker.cpp  LevyWalker.cpp  LevyWalkerSkewed.cpp  LevyWalkerSkewed.h  ParetoWalker.cpp  ParetoWalker.h  RTPpotentialWalker.cpp  RTPpotentialWalker.h  UniformWalker.cpp  UniformWalker.h
DiscreteWalker/: .DiscreteWalker.cpp.swp  BiasedWalker.cpp  BiasedWalker.h  Bindings.cpp  CMakeLists.txt  DiscreteWalker.cpp  DiscreteWalker.h  Makefile  SATWWalker.cpp  exemple.cpp  exemple.h  main  main.cpp  setup.py  test.py  test_cpp.py
DiscreteWalker/.cache/clangd/index/: BiasedWalker.cpp.3FD022A8D7AD5DB3.idx  BiasedWalker.h.7BFA94F8C5B17B87.idx  BiasedWalker_bindings.h.722AF92A89284839.idx  Bindings.cpp.D2B653A77968CE9B.idx  DiscreteWalker.cpp.E858A731F26F08BD.idx  DiscreteWalker.h.710E1F262C2E45C0.idx  DiscreteWalker_bindings.h.9685FBB66827DF2B.idx  Observables.cpp.23A2D96CA6827062.idx  Observables.h.EF67411D5588870B.idx  Observables_bindings.h.FF1445D627DE246C.idx  RiemannWalker.cpp.5867D72AD3770493.idx  RiemannWalker.h.7AF453E9BBA99B12.idx  RiemannWalker_bindings.h.DF2239CB2B5E2133.idx  SATWWalker.cpp.3E632D776EC13C0D.idx  SATWWalker.h.E99591F667644798.idx  SATWWalker_bindings.h.538E03847C15B030.idx  ZipfWalker.cpp.FB970C687E53CDE6.idx  ZipfWalker.h.36D4739AD8F9E5BD.idx  ZipfWalker_bindings.h.DB6CEBE300A9EE80.idx
DiscreteWalker/src/: BiasedWalker.cpp  Bindings.cpp  DiscreteWalker.cpp  DiscreteWalker.h  DiscreteWalker_pcg.cpp  DiscreteWalker_pcg.h  LevyWalker.cpp  Observables.cpp  Observables.h  RiemannWalker.cpp  RiemannWalker.h  SATWWalker.h  ZipfWalker.h  observables.cpp
DiscreteWalker/src/bindings/: Bindings.cpp  DiscreteWalker_bindings.h  Observables_bindings.h  RiemannWalker_bindings.h  ZipfWalker_bindings.h
DiscreteWalker/src/observables/: Observables.cpp  Observables.h
DiscreteWalker/src/walkers/: BiasedWalker.h  DiscreteWalker.cpp  DiscreteWalker.h  DiscreteWalker_pcg.cpp  DiscreteWalker_pcg.h  RiemannWalker.cpp  RiemannWalker.h  ZipfWalker.cpp  ZipfWalker.h
GraphWalker/: CMakeLists.txt  setup.py
GraphWalker/src/: GraphWalker.cpp  GraphWalker.h  graph.c  graph.h  make_pairs.sh  make_sp.c  make_sp.sh  random_walker.h
GraphWalker/src/bindings/: BiasedWalker_bindings.h  Bindings.cpp  DiscreteWalker_pcg_bindings.h  GraphWalker_bindings.h  Observables_bindings.h  SATWWalker_bindings.h  ZipfWalker_bindings.h
GraphWalker/src/observables/: Observables.cpp  Observables.h
GraphWalker/src/walkers/: Graph.cpp  Graph.h  GraphWalker.cpp  GraphWalker.h  main.cpp  random_walker.c
GraphWalker/tests/: graph_walker  graph_walker_main.cpp  main  main.cpp  test.py
Graphs/: CMakeLists.txt
Graphs/graph_files/: Tgraph1.txt  Tgraph1_SP.txt  Tgraph1_adja.txt  Tgraph1_chemdist.txt  graph1_chemdist.txt  graph2.txt  graph2_SP.txt  graph2_chemdist.txt  graph4_SP.txt  graph4_chemdist.txt  graph5_chemdist.txt
Graphs/src/: Graph.cpp  Graph.h  main  main.cpp
Graphs/src/executables/: create_all_files.cpp  make_chemdist_from_SP.cpp
Graphs/src/include/: Graph.cpp  Graph.h
RiemannWalker/: CMakeLists.txt  RiemannWalker.cpp  RiemannWalker.h
SATWWalker/: CMakeLists.txt  SATWWalker.cpp  SATWWalker.h  Session.vim  test.py
custom_distributions/: Zipf.cpp  Zipf.h  main  main.cpp  test_distrib.py
custom_distributions/Alex/: a.out  exploit.py  main.cpp
custom_distributions/Zipf/: Zipf.cpp  Zipf.h  a.out  exploit.py  main  main.cpp  test
custom_distributions/pcg/: pcg_random_walk.h
custom_distributions/tmp/: a.out  main  main.cpp  test_distrib.py
d_dimDiscreteWalker/: CMakeLists.txt  a.out  setup.py  test.cpp  test.py
d_dimDiscreteWalker/src/: test.py
d_dimDiscreteWalker/src/bindings/: Bindings.cpp  DiscreteWalker_bindings.h  Observables_bindings.h  ZipfWalker_bindings.h
d_dimDiscreteWalker/src/observables/: Observables.cpp  Observables.h
d_dimDiscreteWalker/src/walkers/: DiscreteWalker.cpp  DiscreteWalker.h  ZipfWalker.cpp  ZipfWalker.h
isotropicWalker/: CMakeLists.txt  setup.py  test.py
isotropicWalker/isotropicWalker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
isotropicWalker/src/bindings/: Bindings.cpp  GaussianWalker_bindings.h  LevyWalker_bindings.h  Observables_bindings.h  RTLWalker_bindings.h
isotropicWalker/src/observables/: Observables.cpp  Observables.h
isotropicWalker/src/walkers/: DiscreteWalker.cpp  DiscreteWalker.h  GaussianWalker.cpp  GaussianWalker.h  LevyWalker.cpp  LevyWalker.h  RTLWalker.cpp  RTLWalker.h
pcg-cpp-0.98/include/: pcg_test.cpp
tests/: .DiscreteWalker_test.py.swp  DiscreteWalker_test.py  load_module_test.py
